' Generated by UML Generator
' Encoded: bLNBRjim4BphAtYaQmleMMYD17O364YBeCcjw84c5-gY4ccGb8ispR-Nb4YPjEGulGJGpiu-PZRqZR5Cswvj2lCJvO5frXBUC6DkhTMuxopik9AF-0V8--872Y0SDM-WAFeiicaGf0NoN11IeWYV5K5fVUJPbRV8NuWhOfbGUYTwZ7nqvHmkLRlNi57jeG6hAlBecihQ8m8rS8vAWgd8FHhxOS3MZYhX5xdLcltkuskwy0Ikj8QiHEd-BCD4TBxJYkGqNsbPWzt5JUWYxkB3Nx8Y7XkxUNXxclc4VViUq4tVAIUPX4J7bSTfAd9KA49Yu9yDV4gnQWWb7LwYJPyPojwZvUX8wqAKwTgS1et5Hje321GgcZjylTbR7cyXIEbZ1wr4nwsAdZw4xukkzXuEZUbvmPDP8I7pAZ4mCocsd5Z4QWqrqn6dSTQAn50YDcSDxngcdvHbZQyaLBTl_8xBLXchcVuAfcj1qgceeTeewzZdl_vfqai_kCD1bGmHT8khv8mLoVCJ7IDXvkfdXFH5yjrdRZ0HQs3SeSmacmYpnHgTgeC-bhLCIhK5mzsnidJ71Zb8ZYnL0ezPYd2qpft1PMr2ioiIhSY5ELRaV8gevbDEo7Lo-7tWJHw4tP7HP8ty4TZ6XUXajPdhVAFWTsYGXtlaxdhXapo-Sav3-bN5ffKMuqiOaLoLgsE7z-XTMOwFIWWf5uhp5UU7L9P_rrCqR9s3Do25-pNy1m
' URL: http://www.plantuml.com/plantuml/uml/bLNBRjim4BphAtYaQmleMMYD17O364YBeCcjw84c5-gY4ccGb8ispR-Nb4YPjEGulGJGpiu-PZRqZR5Cswvj2lCJvO5frXBUC6DkhTMuxopik9AF-0V8--872Y0SDM-WAFeiicaGf0NoN11IeWYV5K5fVUJPbRV8NuWhOfbGUYTwZ7nqvHmkLRlNi57jeG6hAlBecihQ8m8rS8vAWgd8FHhxOS3MZYhX5xdLcltkuskwy0Ikj8QiHEd-BCD4TBxJYkGqNsbPWzt5JUWYxkB3Nx8Y7XkxUNXxclc4VViUq4tVAIUPX4J7bSTfAd9KA49Yu9yDV4gnQWWb7LwYJPyPojwZvUX8wqAKwTgS1et5Hje321GgcZjylTbR7cyXIEbZ1wr4nwsAdZw4xukkzXuEZUbvmPDP8I7pAZ4mCocsd5Z4QWqrqn6dSTQAn50YDcSDxngcdvHbZQyaLBTl_8xBLXchcVuAfcj1qgceeTeewzZdl_vfqai_kCD1bGmHT8khv8mLoVCJ7IDXvkfdXFH5yjrdRZ0HQs3SeSmacmYpnHgTgeC-bhLCIhK5mzsnidJ71Zb8ZYnL0ezPYd2qpft1PMr2ioiIhSY5ELRaV8gevbDEo7Lo-7tWJHw4tP7HP8ty4TZ6XUXajPdhVAFWTsYGXtlaxdhXapo-Sav3-bN5ffKMuqiOaLoLgsE7z-XTMOwFIWWf5uhp5UU7L9P_rrCqR9s3Do25-pNy1m
' Generated on: 2025-11-22T12:54:56.146642300

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -idCliente: int
  -{static} contadorId: int = 0
  -nombreCompleto: String
  -direcciones: List<String> = new ArrayList<>()
  -correo: String
  --
  +Cliente(nombreCompleto: String, correo: String)
  +getIdCliente(): int
  +getNombreCompleto(): String
  +getDirecciones(): String[]
  +getCorreo(): String
  +setDireccion(direccion: String): void
  +setCorreo(correo: String): void
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -idPedido: int
  -{static} contadorId: int = 0
  -cliente: Cliente
  -productos: List<Producto> = new ArrayList<>()
  --
  +Pedido(cliente: Cliente)
  +getIdPedido(): int
  +getCliente(): String
  +getProductos(): String[]
  +agregarProducto(producto: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

class Producto {
  -idProducto: int
  -{static} contadorId: int = 0
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +getIdProducto(): int
  +getNombre(): String
  +getPrecio(): double
  +toString(): String
  +calcularPrecioFinal(): double
}

class ProductoDigital {
  -tamannoDescarga: double
  -licencia: String
  -iva: double
  -descuento: double
  --
  +ProductoDigital(nombre: String, precio: double, tamannoDescarga: double, licencia: String)
  +getTamannoDescarga(): double
  +getLicencia(): String
  +setIva(iva: double): void
  +setDescuento(descuento: double): void
  +calcularPrecioFinal(): double
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +getCosteEnvio(): double
  +calcularPrecioFinal(): double
}

Pedido *-- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml